--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "CS52",
   "main": "src/server.js",
   "scripts": {
-    "test": "eslint src",
+    "test": "cypress run",
     "start": "nodemon src/server.js --exec babel-node",
     "babel-start": "babel-node src/server.js",
     "build": "babel src -d dist",
@@ -26,8 +26,10 @@
     "@babel/preset-env": "^7.21.5",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "cypress": "^12.12.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "mongoose": "^7.1.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
